# pywebasto

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  README.md  example.py  pyproject.toml  test.py
.github/: release-drafter.yml
.github/scripts/: update_poetry_version_stamp.py
.github/workflows/: deploy-pypi.yml  quality-checks.yml  release-drafter.yml
docs/: android_app_analysis.md  protocol.md  save_timers_analysis.md  timer_interpretation.md
docs/dumps/: create-timer.txt  delete-timer.txt  disable-timer.txt  edit-timer.txt  enable-timer.txt
pywebasto/: __init__.py  consts.py  device.py  enums.py  exceptions.py  timer.py
tests/: test_app_backend.py  test_device_connection.py  test_http_resilience.py  test_simple_timers.py
