[tool.poetry]
name = "pywebasto"
version = "1.0.2"
description = "API library for Webasto ThermoConnect devices"
authors = ["Malene Trab <malene@trab.dk>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
documentation = "https://github.com/mtrab/pywebasto"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mtrab/pywebasto/issues"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"
pyproj = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
