[tool.poetry]
name = "pywebasto"
version = "2.0.0"
description = "API library for Webasto ThermoConnect devices"
authors = ["Malene Trab <malene@trab.dk>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
documentation = "https://github.com/mtrab/pywebasto"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mtrab/pywebasto/issues"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
